force-app/main/default/objects/Product2/fields/Additional__c.field-meta.xml
<CustomField>
    <fullName>Additional__c</fullName>
    <label>Additional</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conference_Room</fullName>
                <label>Conference Room</label>
            </value>
            <value>
                <fullName>Callboxes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>