force-app/main/default/objects/Product2/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>Usable Area of Busines Premises</description>
    <label>Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>