force-app/main/default/objects/Product2/fields/Bathroom__c.field-meta.xml
<CustomField>
    <fullName>Bathroom__c</fullName>
    <inlineHelpText>Select all equipment</inlineHelpText>
    <label>Bathroom</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bath</fullName>
            </value>
            <value>
                <fullName>Shower</fullName>
            </value>
            <value>
                <fullName>Hydro Massage</fullName>
            </value>
            <value>
                <fullName>Sauna</fullName>
            </value>
            <value>
                <fullName>Jacuzzi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>