force-app/main/default/objects/Product2/fields/Facilities_For_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Facilities_For_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this premise contains any facilities for disabled people to help them access and/or use it?</inlineHelpText>
    <label>Facilities For Disabled</label>
    <type>Checkbox</type>
</CustomField>