force-app/main/default/objects/Product2/fields/Furnished__c.field-meta.xml
<CustomField>
    <fullName>Furnished__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the Apartment furnished?</description>
    <inlineHelpText>Is the Apartment furnished?</inlineHelpText>
    <label>Furnished</label>
    <type>Checkbox</type>
</CustomField>