force-app/main/default/objects/Product2/fields/Garage_space__c.field-meta.xml
<CustomField>
    <fullName>Garage_space__c</fullName>
    <inlineHelpText>How many square meters does garage have?</inlineHelpText>
    <label>Garage_space</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>