force-app/main/default/objects/Product2/fields/Parking_spaces__c.field-meta.xml
<CustomField>
    <fullName>Parking_spaces__c</fullName>
    <label>Parking spaces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>