force-app/main/default/objects/Product2/fields/Rooms__c.field-meta.xml
<CustomField>
    <fullName>Rooms__c</fullName>
    <inlineHelpText>How many rooms does this apartment have?</inlineHelpText>
    <label>Rooms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>