force-app/main/default/objects/Product2/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Street</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>