force-app/main/default/objects/Product2/fields/Swimming_Pool__c.field-meta.xml
<CustomField>
    <fullName>Swimming_Pool__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is there an access to a swimming pool?</inlineHelpText>
    <label>Swimming Pool</label>
    <type>Checkbox</type>
</CustomField>