force-app/main/default/objects/Product2/fields/Toilet__c.field-meta.xml
<CustomField>
    <fullName>Toilet__c</fullName>
    <label>Toilet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal toilet</fullName>
                <default>true</default>
                <label>Internal toilet</label>
            </value>
            <value>
                <fullName>Shared toilet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>