force-app/main/default/objects/Product2/recordTypes/Business_Premises.recordType-meta.xml
<RecordType>
    <fullName>Business_Premises</fullName>
    <active>true</active>
    <label>Business Premises</label>
</RecordType>